--- a/lang/es/dialog_folder_name.txt
+++ b/lang/es/dialog_folder_name.txt
@@ -1,3 +1,3 @@
 Por favor, introduzca el nombre de la carpeta.\\
 Atención: **NO** se creará una carpeta hasta que se **GUARDE**\\
-una página dentro de esa carpeta
+una página dentro de esa carpeta.
