--- a/lang/ko/dialog_folder_name.txt
+++ b/lang/ko/dialog_folder_name.txt
@@ -1,3 +1,3 @@
-폴더 이름을 입력하십시요.\\
-참고 - 새 폴더는 폴더 내의 파일이 **저장**될 때까지\\
-생성되지 **않습니다.**
+폴더 이름을 입력하세요.\\
+폴더는 폴더 안에 문서가 **저장**되기 전에\\
+만들어지지 **않음**을 참고하세요.
